[tool.poetry]
name = "giza-datasets"
version = "0.1.0"
description = ""
authors = ["Fran Algaba <f.algaba@outlook.es>"]
readme = "README.md"
license = "MIT"
include = ["datasets/*"]


[tool.poetry.dependencies]
python = "^3.11"
polars = "^0"
gcsfs = "^2023.12.2.post1"
pydantic = "^1"
rich = "^13"
pyarrow = "^15"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pre-commit = "^3.6.0"
ruff = "^0.1.11"
black = "^23.12.1"
isort = "^5.13.2"
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
